// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> renders correctly 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label
    </span>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <input
        class="chakra-input css-nkgdpn"
        id="test-input"
        placeholder="placeholder"
      />
    </div>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Input /> shows correctly when is disabled: Using as disabled 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label
    </span>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <input
        class="chakra-input css-nkgdpn"
        disabled=""
        id="test-input"
        placeholder="placeholder"
      />
    </div>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Input /> shows correctly when is invalid: Using as invalid 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label
    </span>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <input
        aria-invalid="true"
        class="chakra-input css-ybk3ki"
        id="test-input"
        placeholder="placeholder"
      />
      <div
        class="chakra-input__right-element css-1akgnmh"
      >
        <div
          class="css-k008qs"
          data-testid="input-error-icon"
        >
          <div
            class="css-amv3mm"
          >
            <svg
              class="chakra-icon css-1j9mq94"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm-8,56a8,8,0,0,1,16,0v56a8,8,0,0,1-16,0Zm8,104a12,12,0,1,1,12-12A12,12,0,0,1,128,184Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Input /> shows correctly when isRequired: Is required 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label*
    </span>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <input
        class="chakra-input css-nkgdpn"
        id="test-input"
        placeholder="placeholder"
      />
    </div>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Input /> shows correctly when isSuccess: Is Success 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label
    </span>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <input
        class="chakra-input css-1nxcjzo"
        id="test-input"
        placeholder="placeholder"
      />
      <div
        class="chakra-input__right-element css-1akgnmh"
      >
        <div
          class="css-k008qs"
          data-testid="input-success-icon"
        >
          <div
            class="css-amv3mm"
          >
            <svg
              class="chakra-icon css-3gomrt"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm45.66,85.66-56,56a8,8,0,0,1-11.32,0l-24-24a8,8,0,0,1,11.32-11.32L112,148.69l50.34-50.35a8,8,0,0,1,11.32,11.32Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Input /> shows correctly when size is large: Using large size 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label
    </span>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <input
        class="chakra-input css-nkgdpn"
        id="test-input"
        placeholder="placeholder"
      />
    </div>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Input /> shows correctly when size is medium: Using medium size 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label
    </span>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <input
        class="chakra-input css-19hxx5h"
        id="test-input"
        placeholder="placeholder"
      />
    </div>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Input /> shows correctly when uses addon left: Using addon left 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label
    </span>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <div
        class="chakra-input__left-element css-irrpsr"
      >
        <div
          class="css-amv3mm"
        >
          <svg
            class="chakra-icon css-1bnjyrz"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M192,176a8,8,0,0,1-3.2,6.4l-64,48A8,8,0,0,1,120,232a8,8,0,0,1-8-8V144L60.8,182.4a8,8,0,0,1-9.6-12.8L106.67,128,51.2,86.4a8,8,0,0,1,9.6-12.8L112,112V32a8,8,0,0,1,12.8-6.4l64,48a8,8,0,0,1,0,12.8L133.33,128l55.47,41.6A8,8,0,0,1,192,176Z"
            />
          </svg>
        </div>
      </div>
      <input
        class="chakra-input css-aaiujl"
        id="test-input"
        placeholder="placeholder"
      />
    </div>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Input /> shows correctly when uses addon right and input is invalid: Using addon right and invalid 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label
    </span>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <input
        aria-invalid="true"
        class="chakra-input css-1rcvey7"
        id="test-input"
        placeholder="placeholder"
      />
      <div
        class="chakra-input__right-element css-1akgnmh"
      >
        <button
          aria-label="Bluetooth"
          class="chakra-button css-iw4qe6"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M192,176a8,8,0,0,1-3.2,6.4l-64,48A8,8,0,0,1,120,232a8,8,0,0,1-8-8V144L60.8,182.4a8,8,0,0,1-9.6-12.8L106.67,128,51.2,86.4a8,8,0,0,1,9.6-12.8L112,112V32a8,8,0,0,1,12.8-6.4l64,48a8,8,0,0,1,0,12.8L133.33,128l55.47,41.6A8,8,0,0,1,192,176Z"
            />
          </svg>
        </button>
        <div
          class="css-k008qs"
          data-testid="input-error-icon"
        >
          <div
            class="css-amv3mm"
          >
            <svg
              class="chakra-icon css-1j9mq94"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm-8,56a8,8,0,0,1,16,0v56a8,8,0,0,1-16,0Zm8,104a12,12,0,1,1,12-12A12,12,0,0,1,128,184Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Input /> shows correctly when uses addon right: Using addon right 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label
    </span>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <input
        class="chakra-input css-16qaat3"
        id="test-input"
        placeholder="placeholder"
      />
      <div
        class="chakra-input__right-element css-1akgnmh"
      >
        <button
          aria-label="Bluetooth"
          class="chakra-button css-iw4qe6"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-kpbtv0"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M192,176a8,8,0,0,1-3.2,6.4l-64,48A8,8,0,0,1,120,232a8,8,0,0,1-8-8V144L60.8,182.4a8,8,0,0,1-9.6-12.8L106.67,128,51.2,86.4a8,8,0,0,1,9.6-12.8L112,112V32a8,8,0,0,1,12.8-6.4l64,48a8,8,0,0,1,0,12.8L133.33,128l55.47,41.6A8,8,0,0,1,192,176Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Input /> shows correctly when uses outline variant: Using outline variant 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label
    </span>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <input
        class="chakra-input css-nkgdpn"
        id="test-input"
        placeholder="placeholder"
      />
    </div>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Input /> shows correctly with bottomDescription: Bottom Description 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label
    </span>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <input
        class="chakra-input css-nkgdpn"
        id="test-input"
        placeholder="placeholder"
      />
    </div>
    <p
      class="css-16fpc31"
    >
      This is a description
    </p>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Input /> shows correctly with subLabel: Bottom Description 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label
    </span>
    <span
      class="css-gwktuy"
      id="subLabel"
    >
      This is a sublabel
    </span>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <input
        class="chakra-input css-nkgdpn"
        id="test-input"
        placeholder="placeholder"
      />
    </div>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Input /> shows correctly with topDescription: Top Description 1`] = `
<DocumentFragment>
  <label
    class="css-mimi7r"
    for="test-input"
  >
    <span
      class="css-1e9661m"
      id="label"
    >
      label
    </span>
    <p
      class="css-14yoljn"
    >
      This is a description
    </p>
    <div
      class="chakra-input__group css-pwmwmr"
      data-group="true"
    >
      <input
        class="chakra-input css-nkgdpn"
        id="test-input"
        placeholder="placeholder"
      />
    </div>
  </label>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
